# EpiTuner

./: -la  .dockerignore  .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  TRAINING_FIXES.md  TROUBLESHOOTING.md  WINDOWS_SETUP.md  app.py  flowcharts.html  gpu_setup.md  install_gpu.py  install_gpu_pytorch.py  install_quadro4000.py  pyproject.toml  requirements.txt  run_gui.py  setup.bat  setup.ps1  setup.py  test_training.py  upgrade_torch.py
Documentation/: README.md  config_manager.md  flowchart_index.md  integration_guide.md  master_flowchart.md
Documentation/contextualizer/: README.md  contextualizer_flow_diagram.md  contextualizer_quick_reference.md
Documentation/data_loader/: README.md  data_loader_documentation.md  data_loader_flow_diagram.md  data_loader_quick_reference.md  (+1 more)
chat_templates/: medical_classification.jinja  validation_template.jinja
configs/: config.yaml  config_base.yaml  config_consumer_gpu.yaml  config_cpu_only.yaml  config_no_quantization.yaml  config_rtx4000.yaml
epituner/: __init__.py  inference_scoring.py  rationale.py
gui/: epituner_gui.py
sample_data/: medical_sample.csv
scripts/: config_manager.py  contextualizer.py  data_loader.py  debugging_logger.py  evaluate.py  fine_tuner.py  formatter.py  formatter_promptbuilder.py  inference.py  inference_runner.py  predict.py  schema_mapper.py  train.py
tests/: test_contextualizer.py  test_data_loader.py  test_debugging_logger.py  test_fine_tuner.py  test_formatter.py  test_formatter_promptbuilder.py  test_gui.py  test_inference_runner.py  test_schema_mapper.py
(+31 files in other folders)
