[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epituner"
version = "0.1.0"
description = "LoRA fine-tuning tool for medical data with Streamlit interface"
authors = [{name = "EpiTuner Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
    "streamlit>=1.28.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.17.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.14.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.10.0"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
